# dbpedia_graph

./: .gitignore  app.re  dune  dune-project  graph.opam  package-lock.json  package.json  qwiki.ml  tailwind.config.js  webpack.config.js
assets/: index.html
lib/: basic_ops.ml  dune  forms.eml.html  graph.ml  routes.ml  routes.mli  web_server.ml
lib/frontend/: Greeting.re  dune  hello.ml  hello.re
test/: dune
